--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
         <button class="btn btn-danger">
             Diminuir
         </button>
-        <h4 class="my-5">contador: <span>0</span></h4>
+        <h4 class="my-5">contador: <span id="span">0</span></h4>
     </div>
     <script src="script.js"></script>
 </body>
